Now displaying version

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Autonomous RC Car Configuration</title>
+  <title>Autonomous RC Car Configuration – Version {{ version }}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     :root {
@@ -110,7 +110,7 @@
   </style>
 </head>
 <body>
-  <header><h1>Autonomous RC Car Configuration</h1></header>
+  <header><h1>Autonomous RC Car Configuration <small style="font-weight:normal;font-size:1.0em;">v{{ version }}</small></h1></header>
 
   <main>
     <!-- Wi-Fi Card -->
